// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Componente de transação do extrato O snapshot do componente deve permanecer sempre o mesmo 1`] = `
<div
  class="transacao-container"
>
  <p>
    08/09/2020
  </p>
  <p>
    saque
  </p>
  <p>
    R$ 
    20.00
  </p>
</div>
`;

exports[`Componente de transação do extrato Snapshot das transações deve ser renderizado 1`] = `
<div
  data-testid="transacoes"
>
  <div
    class="transacao-container"
  >
    <p>
      10/12/2021
    </p>
    <p>
      saque
    </p>
    <p>
      R$ 
      30.00
    </p>
  </div>
  <div
    class="transacao-container"
  >
    <p>
      10/12/2021
    </p>
    <p>
      deposito
    </p>
    <p>
      R$ 
      40.00
    </p>
  </div>
</div>
`;
